Bug 271392 - REGRESSION (275819@main): 5 Tests in TestWebKitAPI.WKWebExtensionAPIWebRequest sometimes timeout (270812)
Summary: REGRESSION (275819@main): 5 Tests in TestWebKitAPI.WKWebExtensionAPIWebReques...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Extensions (show other bugs)
Version: WebKit Local Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Timothy Hatcher
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-03-21 09:52 PDT by Timothy Hatcher
Modified: 2024-03-21 13:00 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Hatcher 2024-03-21 09:52:02 PDT
TestWebKitAPI.WKWebExtensionAPIWebRequest.AllEventsFiredTest
TestWebKitAPI.WKWebExtensionAPIWebRequest.ErrorOccurred
TestWebKitAPI.WKWebExtensionAPIWebRequest.EventFiringTest
TestWebKitAPI.WKWebExtensionAPIWebRequest.RedirectOccurred

rdar://124401551
Comment 1 Timothy Hatcher 2024-03-21 09:59:59 PDT
Pull request: https://github.com/WebKit/WebKit/pull/26251
Comment 2 EWS 2024-03-21 13:00:53 PDT
Committed 276487@main (3fd749507636): <https://commits.webkit.org/276487@main>

Reviewed commits have been landed. Closing PR #26251 and removing active labels.